[project]
name = "portfolio-analytics-engineering"
version = "0.1.0"
description = "End-to-end analytics engineering portfolio"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dbt-core>=1.8,<2.0",
    "dbt-snowflake>=1.8,<2.0",
    "pandas>=2.0,<3.0",
    "pyarrow>=12,<22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "sqlfluff>=3,<5",
    "jupyter>=1.0,<2.0",
]
